# memcache

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/memc_load/: appsinstalled_pb2.py  memc_load.py
tests/: test_memc_load.py
